WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
38473
[chromium] right clicks should not close select popup
https://bugs.webkit.org/show_bug.cgi?id=38473
Summary
[chromium] right clicks should not close select popup
Jay Civelli
Reported
2010-05-03 11:11:00 PDT
- Open a select popup - Right click in the page (or on the select itself) Expected: - the select popup stays open Actual: - the select popup is closed
Attachments
Don't hide popup on right and middle mouse click
(1.48 KB, patch)
2010-05-03 11:25 PDT
,
Jay Civelli
levin
: review-
Details
Formatted Diff
Diff
Fixing style
(1.49 KB, patch)
2010-05-03 16:50 PDT
,
Jay Civelli
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Jay Civelli
Comment 1
2010-05-03 11:25:54 PDT
Created
attachment 54944
[details]
Don't hide popup on right and middle mouse click
WebKit Review Bot
Comment 2
2010-05-03 11:27:41 PDT
Attachment 54944
[details]
did not pass style-queue: Failed to run "['WebKitTools/Scripts/check-webkit-style', '--no-squash']" exit_code: 1 WebKit/chromium/ChangeLog:6: Line contains tab character. [whitespace/tab] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
David Levin
Comment 3
2010-05-03 16:33:49 PDT
Comment on
attachment 54944
[details]
Don't hide popup on right and middle mouse click This seems fine except for the tab in the changelog noted by the stylebot, so this won't commit cleanly in this state. If you were a WebKit committer, I'd give you an r+ but due to the TAB and the non-committer status r-.
Jay Civelli
Comment 4
2010-05-03 16:50:43 PDT
Created
attachment 54973
[details]
Fixing style
WebKit Commit Bot
Comment 5
2010-05-04 07:04:56 PDT
Comment on
attachment 54973
[details]
Fixing style Clearing flags on attachment: 54973 Committed
r58757
: <
http://trac.webkit.org/changeset/58757
>
WebKit Commit Bot
Comment 6
2010-05-04 07:05:01 PDT
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 7
2010-05-04 07:57:31 PDT
http://trac.webkit.org/changeset/58757
might have broken Qt Linux Release The following changes are on the blame list:
http://trac.webkit.org/changeset/58756
http://trac.webkit.org/changeset/58757
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug