2010-05-04  Jay Civelli  <jcivelli@chromium.org>

Reviewed by David Levin.

        [chromium] Make the select popup not close on right/middle clicks.
        https://bugs.webkit.org/show_bug.cgi?id=38473

        * src/WebViewImpl.cpp:
        (WebKit::WebViewImpl::mouseDown):

Canonical link: https://commits.webkit.org/50012@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@58757 268f45cc-cd09-0410-ab3c-d52691b4dbfc